Attempting fix for font on iOS. Update globals.scss

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'DotMatrix';
-  src: url('/fonts/pinside-dotmatrix-webfont.woff2') format('woff2');
+  src: url('../fonts/pinside-dotmatrix-webfont.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
 }
